# raytracing

./: .gitignore  .gitmodules  CMakeLists.txt
raytracing/: CMakeLists.txt  camera.h  material.cpp  material.h  mesh.cpp  mesh.h  ray.h  raytracing.cpp  raytracing.h  render.cpp  render.h  scene.cpp  scene.h
raytracing/common/: logging.h  math.cpp  math.h  rstd.cpp  rstd.h
raytracing/gpu/: util.cpp  util.h
